--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Foreigneers</title>
     <meta name="description" content="blank">
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./images/favicon/site.webmanifest">
-    <link rel="mask-icon" href="./images/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="./images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/config/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/config/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/config/favicon-16x16.png">
+    <link rel="manifest" href="./assets/config/site.webmanifest">
+    <link rel="mask-icon" href="./assets/config/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./assets/config/favicon.ico">
     <meta name="msapplication-TileColor" content="#00aba9">
-    <meta name="msapplication-config" content="./images/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="./assets/config/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -21,12 +21,12 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Landing page | Foreigneers" />
     <meta property="og:description" content="blank" />
-    <meta property="og:image" content="https://www.foreigneers.com/images/favicon/android-chrome-512x512.png" />
+    <meta property="og:image" content="./assets/config/android-chrome-512x512.png" />
     <meta name=”twitter:card” content="summary" /> 
     <meta name=”twitter:site” content=@foreigneers /> 
     <meta name=”twitter:title” content="Landing page | Foreigneers" /> 
     <meta name=”twitter:description” content="blank" /> 
-    <meta name=”twitter:image” content="https://www.foreigneers.com/images/favicon/android-chrome-512x512.png" /> 
+    <meta name=”twitter:image” content="./assets/config/android-chrome-512x512.png" /> 
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
