Adds basic mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
 
     <header class="header">
-        <div class="container header__container">
+        <div class="header__container container">
             <div class="header__logo">
                 <a href="/">
                     <img src="./assets/img/Logo.png" alt="Foreigneers Logo">
@@ -52,6 +52,11 @@
 
             <div class="header__btn">
                 <a href="#" class="btn btn__primary">Login</a>
+            </div>
+            <div class="header__mobile-icon">
+                <a href="">
+                    <img src="./assets/img/menu.png" alt="">
+                </a>
             </div>
         </div>
     </header>
@@ -240,7 +245,7 @@
         </section>
         <section class="section__progress">
             <div class="container section__container grid-of-2">
-                <div class="section__img">
+                <div class="img__devices">
                     <img src="./assets/img/devices.png" alt="">
                 </div>
                 <div class="section__content">
