Adds smooth scroll

--- a/index.html
+++ b/index.html
@@ -42,12 +42,24 @@
             </div>
 
             <ul class="menu__list">
-                <li class="menu__item"><a href="#" class="menu__link">About Us</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Features</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Platforms</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Progress</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Demo</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Donate</a></li>
+                <li class="menu__item">
+                    <a href="#about" class="menu__link">About Us</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#features" class="menu__link">Features</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#platforms" class="menu__link">Platforms</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#progress" class="menu__link">Progress</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#demo" class="menu__link">Demo</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#donate" class="menu__link">Donate</a>
+                </li>
             </ul>
 
             <div class="header__btn">
@@ -84,7 +96,7 @@
                 </div>
             </div>
         </section>
-        <section class="section__vision">
+        <section class="section__vision" id="about">
             <div class="container section__container grid-of-2">
                 <div class="section__content">
                     <div class="section__title">
@@ -104,7 +116,7 @@
                 </div>
             </div>
         </section>
-        <section class="section__features">
+        <section class="section__features" id="features">
             <div class="container section__container">
                 <div class="section__title section__title--1">
                     <h3 class="heading__secondary">Features</h3>
@@ -180,7 +192,7 @@
             </div>
 
         </section>
-        <section>
+        <section id="platforms">
             <div class="section__container container grid-of-2">
                 <div class="section__img">
                     <img src="./assets/img/video-call.png" alt="">
@@ -211,7 +223,7 @@
 
             </div>
         </section>
-        <section class="section__demo">
+        <section class="section__demo" id="progress">
             <div class="container section__container grid-of-2">
                 <div class="section__content">
                     <div class="section__title">
@@ -243,7 +255,7 @@
 
 
         </section>
-        <section class="section__progress">
+        <section class="section__progress" id="demo">
             <div class="container section__container grid-of-2">
                 <div class="img__devices">
                     <img src="./assets/img/devices.png" alt="">
@@ -266,7 +278,7 @@
 
             </div>
         </section>
-        <section class="section">
+        <section class="section" id="donate">
             <div class="section__container section__patreon container">
                 <div class="u_center_text">
                     <div class="section__title">
