Adds transition animations

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </section>
         <section class="section__vision" id="about">
             <div class="container section__container grid-of-2">
-                <div class="section__content">
+                <div class="section__content from__left from">
                     <div class="section__title">
                         <h3 class="heading__secondary">Our Vision</h3>
                     </div>
@@ -111,7 +111,7 @@
                         <a href="#" class="btn btn__primary">Read More</a>
                     </div>
                 </div>
-                <div class="section__img">
+                <div class="section__img from__right from">
                     <img src="./assets/img/teachingbro.png" alt="">
                 </div>
             </div>
@@ -122,7 +122,7 @@
                     <h3 class="heading__secondary">Features</h3>
                 </div>
                 <div class="grid-of-3">
-                    <div class="feature__box">
+                    <div class="feature__box fade-in">
                         <div class="feature__img">
                             <img src="./assets/img/card-1.png" alt="">
                         </div>
@@ -132,7 +132,7 @@
                         </div>
 
                     </div>
-                    <div class="feature__box">
+                    <div class="feature__box fade-in">
                         <div class="feature__img">
                             <img src="./assets/img/card-3.png" alt="">
                         </div>
@@ -142,7 +142,7 @@
                         </div>
 
                     </div>
-                    <div class="feature__box">
+                    <div class="feature__box fade-in">
                         <div class="feature__img">
                             <img src="./assets/img/card-2.png" alt="">
                         </div>
@@ -152,7 +152,7 @@
                         </div>
 
                     </div>
-                    <div class="feature__box">
+                    <div class="feature__box fade-in">
                         <div class="feature__img">
                             <img src="./assets/img/card-1.png" alt="">
                         </div>
@@ -162,7 +162,7 @@
                         </div>
 
                     </div>
-                    <div class="feature__box">
+                    <div class="feature__box fade-in">
                         <div class="feature__img">
                             <img src="./assets/img/card-3.png" alt="">
                         </div>
@@ -172,7 +172,7 @@
                         </div>
 
                     </div>
-                    <div class="feature__box">
+                    <div class="feature__box fade-in">
                         <div class="feature__img">
                             <img src="./assets/img/card-2.png" alt="">
                         </div>
@@ -194,10 +194,10 @@
         </section>
         <section id="platforms">
             <div class="section__container container grid-of-2">
-                <div class="section__img">
+                <div class="section__img from from__left">
                     <img src="./assets/img/video-call.png" alt="">
                 </div>
-                <div class="section__content">
+                <div class="section__content from from__right">
                     <div class="section__title">
                         <h3 class="heading__secondary">Lorem ipsum dolor sit amet, consectetur</h3>
                     </div>
@@ -225,7 +225,7 @@
         </section>
         <section class="section__demo" id="progress">
             <div class="container section__container grid-of-2">
-                <div class="section__content">
+                <div class="section__content from from__left">
                     <div class="section__title">
                         <h3 class="heading__secondary">FOLLOW OUR PROGRESS</h3>
                     </div>
@@ -242,7 +242,7 @@
                     </div>
                 </div>
 
-                <div class="section__img">
+                <div class="section__img from from__right">
                     <img src="./assets/img/pair-programming.png" alt="">
                 </div>
 
@@ -257,10 +257,10 @@
         </section>
         <section class="section__progress" id="demo">
             <div class="container section__container grid-of-2">
-                <div class="img__devices">
+                <div class="img__devices from from__left">
                     <img src="./assets/img/devices.png" alt="">
                 </div>
-                <div class="section__content">
+                <div class="section__content from from__right">
                     <div class="section__title">
                         <h3 class="heading__secondary">Check our demo</h3>
                     </div>
@@ -279,7 +279,7 @@
             </div>
         </section>
         <section class="section" id="donate">
-            <div class="section__container section__patreon container">
+            <div class="section__container section__patreon container fade-in">
                 <div class="u_center_text">
                     <div class="section__title">
                         <h3 class="heading__secondary">Lorem ipsum dolor sit</h3>
