--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </section>
         <section class="section__vision" id="about">
             <div class="container section__container grid-of-2">
-                <div class="section__content from__left from">
+                <div class="section__content">
                     <div class="section__title">
                         <h3 class="heading__secondary">Our Vision</h3>
                     </div>
@@ -111,7 +111,7 @@
                         <a href="#" class="btn btn__primary">Read More</a>
                     </div>
                 </div>
-                <div class="section__img from__right from">
+                <div class="section__img">
                     <img src="./assets/img/teachingbro.png" alt="">
                 </div>
             </div>
