Adds basic signin and signup pages

--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
                 <a href="#" class="btn btn__primary">Login</a>
             </div>
             <div class="header__mobile-icon">
-                <a href="">
-                    <img src="./assets/img/menu.png" alt="">
-                </a>
+                <div class="menu__btn">
+                    <div class="btn__line"></div>
+                    <div class="btn__line"></div>
+                    <div class="btn__line"></div>
+                </div>
+
             </div>
         </div>
     </header>
