--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Foreigneers | Sign Up</title>
+    <title>Foreigneers | Sign In</title>
     <meta name="description" content="blank">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/config/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/config/favicon-32x32.png">
@@ -56,33 +56,13 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card__content">
-                    <div class="card__title">
-                        <h3 class="heading__secondary heading__secondary--2">Welcome Back!</h3>
 
-                    </div>
-                    <div class="card__text">
-                        <p class="text text__secondary u_center_text">
-                            To keep connected with us please login with your personal info
-                        </p>
-                    </div>
-                    <div class="card__btn">
-                        <a href="/signin.html" class="btn btn__tertiary uppercase">Sign in</a>
-                    </div>
-                </div>
                 <div class="card__form">
                     <div class="card__title">
-                        <div class="heading__tertiary">Create Account</div>
+                        <div class="heading__tertiary">Sign in to Foreigneers</div>
                     </div>
-
-
                     <form>
-                        <div class="form__group">
-                            <div class="form__label">
-                                <img src="./assets/img/account.png" alt="">
-                            </div>
-                            <input type="text" name="" class="form__input" placeholder="Name">
-                        </div>
+
                         <div class="form__group">
                             <div class="form__label">
                                 <img src="./assets/img/email.png" alt="">
@@ -96,12 +76,26 @@
                             <input type="password" name="" class="form__input" placeholder="Password">
                         </div>
                         <div class="form__button u_center_text">
-                            <button type="submit" class="btn btn__form uppercase">Sign Up</button>
+                            <button type="submit" class="btn btn__form uppercase">Sign in</button>
                         </div>
 
 
                     </form>
 
+                </div>
+                <div class="card__content">
+                    <div class="card__title">
+                        <h3 class="heading__secondary heading__secondary--2">Hello, Friend!</h3>
+
+                    </div>
+                    <div class="card__text">
+                        <p class="text text__secondary u_center_text">
+                            Enter your personal details and start journey with us
+                        </p>
+                    </div>
+                    <div class="card__btn">
+                        <a href="/signup.html" class="btn btn__tertiary uppercase">Sign Up</a>
+                    </div>
                 </div>
             </div>
         </div>
