Adds cookie notification

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </ul>
 
             <div class="header__btn">
-                <a href="#" class="btn btn__primary">Login</a>
+                <a href="/signin.html" class="btn btn__primary">Login</a>
             </div>
             <div class="header__mobile-icon">
                 <div class="menu__btn">
@@ -301,6 +301,29 @@
                 </div>
             </div>
         </section>
+        <div class="section__cookie">
+            <div class="cookie__container">
+                <div class="cookie__img">
+                    <img src="./assets/img/cookie.png" alt="">
+                </div>
+                <div class="cookie__content">
+                    <div class="cookie__heading">
+                        <h4 class="heading__secondary--3">Heya! This site uses cookies.</h4>
+                    </div>
+                    <div class="cookie__text">
+                        <p class="text__primary--2">
+                            Cookies allow the website publisher to do useful things like find our whether the computer (
+                            and probably it´s user ) has visited the site before.
+                        </p>
+                    </div>
+                    <div class="cookie__buttons align__right">
+                        <a class="btn btn__primary" id="cookieDeny">Don't Accept</a>
+                        <a class="btn btn__primary--1" id="cookieAllow">Accept Cookies</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="container">
