--- a/termsofservice.html
+++ b/termsofservice.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Foreigneers | Sign In</title>
+    <title>Foreigneers | Terms of Service</title>
     <meta name="description" content="blank">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/config/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/config/favicon-32x32.png">
@@ -32,7 +32,88 @@
 </head>
 
 <body>
+    <main class="container">
+        <div class="header__container">
+            <div class="header__logo">
+                <a href="/">
+                    <img src="./assets/img/Logo.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="card__terms">
+            <div class="card__header">
+                <div class="card__logo">
+                    <img src="./assets/img/footer_logo.png" alt="">
+                </div>
+                <div class="card__title">
+                    <h3 class="heading__secondary heading__secondary--2">Terms of Service</h3>
+                </div>
+            </div>
+            <div class="card__body">
+                <p class="text__primary--1">
+                    <span class="text__primary--dark">
+                        If you live in the United States
+                    </span>
+                    , Foreigneers User Agreement companies there <a href="#" class="link__primary">Terms of Service</a>
+                    , our <a href="#" class="link__primary">Privacy Policy</a>, and all incorporated policies.
 
+                </p>
+                <p class="text__primary--1">
+
+                    <span class="text__primary--dark">
+                        If you live in European Union or otherwise outside the United States
+                    </span>
+                    the foreigneers User Agreement comprises these <a href="#" class="link__primary">Terms of
+                        Service</a> , our <a href="#" class="link__primary">Privacy Policy</a>, and all incorporated
+                    policies.
+                </p>
+
+                <div class="card__heading">
+                    <h2 class="heading__secondary--3">Terms of Services</h2>
+                </div>
+
+                <div class="card__text">
+                    <p class="text__primary--1 bold margin__bottom--medium">
+                        If you live in the United States
+                    </p>
+                    <p class="text__primary--1">
+                        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                        beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+                        odit aut eque porro quisquam est, qui dolorem ipsum quia dolor situr? Quis autem vel eum iure
+                        reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui
+                        dolorem eum fugiat quo voluptas nulla pariatur?"
+                    </p>
+                    <div class="margin__large">
+                        <h2 class="heading__secondary--4">1. Who May Use the Services</h2>
+
+                    </div>
+                    <p class="text text__primary--1 near__invisible">
+                        x ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse
+                        quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                    </p>
+                </div>
+            </div>
+            <div class="card__footer">
+                <a class="card__download" href="#">
+
+                    <img src="./assets/img/document.png" alt="">
+
+                    Download
+
+                </a>
+                <div class="card__buttons">
+                    <a href="#" class="btn uppercase btn__tertiary">
+                        Decline
+                    </a>
+                    <a href="#" class="btn uppercase btn__form">
+                        Accept
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </main>
 </body>
 
 </html>
