Adds basic styling for mobile

--- a/index.html
+++ b/index.html
@@ -317,8 +317,12 @@
                         </p>
                     </div>
                     <div class="cookie__buttons align__right">
-                        <a class="btn btn__primary" id="cookieDeny">Don't Accept</a>
-                        <a class="btn btn__primary--1" id="cookieAllow">Accept Cookies</a>
+                        <div class="">
+                            <a class="btn btn__primary" id="cookieDeny">Don't Accept</a>
+                        </div>
+                        <div class="">
+                            <a class="btn btn__primary--1" id="cookieAllow">Accept Cookies</a>
+                        </div>
                     </div>
 
                 </div>
