Adds terms of sale page

--- a/termsofservice.html
+++ b/termsofservice.html
@@ -103,7 +103,7 @@
 
                 </a>
                 <div class="card__buttons">
-                    <a href="#" class="btn uppercase btn__tertiary">
+                    <a href="#" class="btn uppercase btn__tertiary--1">
                         Decline
                     </a>
                     <a href="#" class="btn uppercase btn__form">
