Adds mobile menu

--- a/index.html
+++ b/index.html
@@ -65,16 +65,41 @@
             <div class="header__btn">
                 <a href="/signin.html" class="btn btn__primary">Login</a>
             </div>
-            <div class="header__mobile-icon">
-                <div class="menu__btn">
-                    <div class="btn__line"></div>
-                    <div class="btn__line"></div>
-                    <div class="btn__line"></div>
-                </div>
 
+            <div class="mobile__menu-btn">
+                <div class="btn__line"></div>
             </div>
+
+            <div class="mobile__menu-bg">
+                &nbsp;
+            </div>
+
+
         </div>
     </header>
+    <ul class="mobile__menu-list">
+        <li class="mobile__menu-item">
+            <a href="#about" class="mobile__menu-link">About Us</a>
+        </li>
+        <li class="mobile__menu-item">
+            <a href="#features" class="mobile__menu-link">Features</a>
+        </li>
+        <li class="mobile__menu-item">
+            <a href="#platforms" class="mobile__menu-link">Platforms</a>
+        </li>
+        <li class="mobile__menu-item">
+            <a href="#progress" class="mobile__menu-link">Progress</a>
+        </li>
+        <li class="mobile__menu-item">
+            <a href="#demo" class="mobile__menu-link">Demo</a>
+        </li>
+        <li class="mobile__menu-item">
+            <a href="#donate" class="mobile__menu-link">Donate</a>
+        </li>
+        <li class="mobile__menu-item">
+            <a href="./signin.html" class="mobile__menu-link">Login</a>
+        </li>
+    </ul>
     <main>
         <section class="section__hero">
             <div class="hero__content container">
