--- a/signup.html
+++ b/signup.html
@@ -55,7 +55,7 @@
                     </a>
                 </div>
             </div>
-            <div class="card">
+            <div class="card reverse">
                 <div class="card__content">
                     <div class="card__title">
                         <h3 class="heading__secondary heading__secondary--2">Welcome Back!</h3>
