Reduces height of the terms of service card

--- a/termsofservice.html
+++ b/termsofservice.html
@@ -88,10 +88,11 @@
                         <h2 class="heading__secondary--4">1. Who May Use the Services</h2>
 
                     </div>
-                    <p class="text text__primary--1 near__invisible">
+                    <p class="text text__primary--1 ">
                         x ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse
-                        quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-                    </p>
+                        quam nihil molestiae consequatur, vel illum qui <span class="near__invisible">dolorem eum fugiat
+                            quo voluptas nulla pariatur?
+                        </span> </p>
                 </div>
             </div>
             <div class="card__footer">
