Adjusts the invisible part in text overflow

--- a/termsofservice.html
+++ b/termsofservice.html
@@ -90,10 +90,14 @@
                     </div>
                     <p class="text text__primary--1 ">
                         x ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse
-                        quam nihil molestiae consequatur, vel illum qui <span class="near__invisible">dolorem eum fugiat
-                            quo voluptas nulla pariatur?
-                        </span> </p>
+                        quam nihil molestiae consequatur, vel illum quidolorem eum fugiat
+                        quo voluptas nulla pariatur?
+                    </p>
                 </div>
+                <div class="near__invisible-container container">
+                    <div class="near__invisible-bg"></div>
+                </div>
+
             </div>
             <div class="card__footer">
                 <a class="card__download" href="#">
