--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
         <div class="header__container container">
             <div class="header__logo">
                 <a href="/">
-                    <img src="./assets/img/Logo.png" alt="Foreigneers Logo">
+                    <picture>
+                        <source srcset="./assets/img/Logo.webp" type="image/webp">
+                        <source srcset="./assets/img/Logo.png" type="image/jpeg">
+                        <img src=" ./assets/img/Logo.png" alt="Foreigneers Logo">
+                    </picture>
                 </a>
             </div>
 
@@ -120,7 +124,11 @@
                     </a>
                 </div>
                 <div class="hero__img">
-                    <img src="./assets/img/hero.png" alt="">
+                    <picture>
+                        <source srcset="./assets/img/hero.webp">
+                        <source srcset="./assets/img/hero.png">
+                        <img srcset="./assets/img/hero.png">
+                    </picture>
                 </div>
             </div>
         </section>
@@ -140,7 +148,11 @@
                     </div>
                 </div>
                 <div class="section__img from from__right">
-                    <img src="./assets/img/teachingbro.png" alt="">
+                    <picture>
+                        <source srcset="./assets/img/teachingbro.webp">
+                        <source srcset="./assets/img/teachingbro.png">
+                        <img src="./assets/img/teachingbro.png" alt="">
+                    </picture>
                 </div>
             </div>
         </section>
@@ -152,65 +164,92 @@
                 <div class="grid-of-3">
                     <div class="feature__box fade-in">
                         <div class="feature__img">
-                            <img src="./assets/img/card-1.png" alt="">
+                            <picture>
+                                <source srcset="./assets/img/card-1.webp" type="image/webp">
+                                <source srcset="./assets/img/card-1.png" type="image/png">
+                                <img src="./assets/img/card-1.png">
+                            </picture>
                         </div>
                         <div class="feature__text">
                             <p class="text text__primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do eiusmod tempor incididunt ut </p>
+                        </div>
+                    </div>
+
+                    <div class="feature__box fade-in">
+                        <div class="feature__img">
+                            <picture>
+                                <source srcset="./assets/img/card-3.webp">
+                                <source srcset="./assets/img/card-3.png">
+                                <img srcset="./assets/img/card-3.png">
+                            </picture>
+                        </div>
+                        <div class="feature__text">
+                            <p class="text text__primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                sed
                                 do eiusmod tempor incididunt ut </p>
                         </div>
 
                     </div>
                     <div class="feature__box fade-in">
                         <div class="feature__img">
-                            <img src="./assets/img/card-3.png" alt="">
+                            <picture>
+                                <source srcset="./assets/img/card-2.webp">
+                                <source srcset="./assets/img/card-2.png">
+                                <img src="./assets/img/card-2.png" alt="">
+                            </picture>
                         </div>
                         <div class="feature__text">
-                            <p class="text text__primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                            <p class="text text__primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                sed
                                 do eiusmod tempor incididunt ut </p>
                         </div>
 
                     </div>
                     <div class="feature__box fade-in">
                         <div class="feature__img">
-                            <img src="./assets/img/card-2.png" alt="">
+                            <picture>
+                                <source srcset="./assets/img/card-1.webp" type="image/webp">
+                                <source srcset="./assets/img/card-1.png" type="image/png">
+                                <img src="./assets/img/card-1.png">
+                            </picture>
                         </div>
                         <div class="feature__text">
                             <p class="text text__primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do eiusmod tempor incididunt ut </p>
+                        </div>
+                    </div>
+
+                    <div class="feature__box fade-in">
+                        <div class="feature__img">
+                            <picture>
+                                <source srcset="./assets/img/card-3.webp">
+                                <source srcset="./assets/img/card-3.png">
+                                <img srcset="./assets/img/card-3.png">
+                            </picture>
+                        </div>
+                        <div class="feature__text">
+                            <p class="text text__primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                sed
                                 do eiusmod tempor incididunt ut </p>
                         </div>
 
                     </div>
                     <div class="feature__box fade-in">
                         <div class="feature__img">
-                            <img src="./assets/img/card-1.png" alt="">
+                            <picture>
+                                <source srcset="./assets/img/card-2.webp">
+                                <source srcset="./assets/img/card-2.png">
+                                <img src="./assets/img/card-2.png" alt="">
+                            </picture>
                         </div>
                         <div class="feature__text">
-                            <p class="text text__primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                            <p class="text text__primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                sed
                                 do eiusmod tempor incididunt ut </p>
                         </div>
 
                     </div>
-                    <div class="feature__box fade-in">
-                        <div class="feature__img">
-                            <img src="./assets/img/card-3.png" alt="">
-                        </div>
-                        <div class="feature__text">
-                            <p class="text text__primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                                do eiusmod tempor incididunt ut </p>
-                        </div>
-
-                    </div>
-                    <div class="feature__box fade-in">
-                        <div class="feature__img">
-                            <img src="./assets/img/card-2.png" alt="">
-                        </div>
-                        <div class="feature__text">
-                            <p class="text text__primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                                do eiusmod tempor incididunt ut </p>
-                        </div>
-
-                    </div>
-
                 </div>
             </div>
             <div class="bg__container">
@@ -223,7 +262,12 @@
         <section id="platforms">
             <div class="section__container container grid-of-2">
                 <div class="section__img from from__left">
-                    <img src="./assets/img/video-call.png" alt="">
+                    <picture>
+                        <source srcset="./assets/img/video-call.webp">
+                        <source srcset="./assets/img/video-call.png">
+                        <img src="./assets/img/video-call.png">
+
+                    </picture>
                 </div>
                 <div class="section__content from from__right">
                     <div class="section__title">
@@ -264,14 +308,22 @@
                     </div>
                     <div class="section__img">
                         <a href="#">
-                            <img src="./assets/img/discord.png" class="img__discord" alt="">
+                            <picture>
+                                <source srcset="./assets/img/discord.webp" type="image/webp">
+                                <source srcset="./assets/img/discord.png" type="image/png">
+                                <img src="./assets/img/discord.png" alt="" class="img__discord">
+                            </picture>
                         </a>
 
                     </div>
                 </div>
 
                 <div class="section__img from from__right">
-                    <img src="./assets/img/pair-programming.png" alt="">
+                    <picture>
+                        <source srcset="./assets/img/pair-programming.webp" type="image/webp">
+                        <source srcset="./assets/img/pair-programming.png" type="image/png">
+                        <img src="./assets/img/pair-programming.png" alt="">
+                    </picture>
                 </div>
 
             </div>
@@ -286,7 +338,11 @@
         <section class="section__progress" id="demo">
             <div class="container section__container grid-of-2">
                 <div class="img__devices from from__left">
-                    <img src="./assets/img/devices.png" alt="">
+                    <picture>
+                        <source srcset="./assets/img/devices.webp" type="image/webp">
+                        <source srcset="./assets/img/devices.png" type="image/png">
+                        <img src="./assets/img/devices.png" alt="">
+                    </picture>
                 </div>
                 <div class="section__content from from__right">
                     <div class="section__title">
@@ -319,7 +375,11 @@
                     </div>
                     <div class="patreon__img">
                         <a href="#">
-                            <img src="./assets/img/patreon.png" alt="">
+                            <picture>
+                                <source srcset="./assets/img/patreon.webp" type="image/webp">
+                                <source srcset="./assets/img/patreon.png" type="image/png">
+                                <img src="./assets/img/patreon.png" alt="">
+                            </picture>
                         </a>
 
                     </div>
@@ -329,6 +389,8 @@
         <div class="section__cookie">
             <div class="cookie__container">
                 <div class="cookie__img">
+                    <source srcset="./assets/img/cookie.webp" type="image/webp">
+                    <source srcset="./assets/img/cookie.png" type="image/png">
                     <img src="./assets/img/cookie.png" alt="">
                 </div>
                 <div class="cookie__content">
@@ -358,7 +420,11 @@
         <div class="container">
             <div class="footer__top u_center_text">
                 <div class="footer__logo">
-                    <img src="./assets/img/footer_logo.png" alt="">
+                    <picture>
+                        <source srcset="./assets/img/footer_logo.webp" type="image/webp">
+                        <source srcset="./assets/img/footer_logo.png" type="image/png">
+                        <img src="./assets/img/footer_logo.png" alt="">
+                    </picture>
                 </div>
             </div>
             <div class="footer__center">
@@ -386,15 +452,27 @@
                 <ul class="footer__social">
                     <li class="footer__social-item">
                         <a href="" class="footer__social-link">
-                            <img src="./assets/img/facebook.png" alt="">
+                            <picture>
+                                <source srcset="./assets/img/facebook.webp" type="image/webp">
+                                <source srcset="./assets/img/facebook.png" type="image/png">
+                                <img src="./assets/img/facebook.png" alt="">
+                            </picture>
                         </a></li>
                     <li class="footer__social-item">
                         <a href="" class="footer__social-link">
-                            <img src="./assets/img/youtube.png" alt="">
+                            <picture>
+                                <source srcset="./assets/img/youtube.webp" type="image/webp">
+                                <source srcset="./assets/img/youtube.png" type="image/png">
+                                <img src="./assets/img/youtube.png" alt="">
+                            </picture>
                         </a></li>
                     <li class="footer__social-item">
                         <a href="" class="footer__social-link">
-                            <img src="./assets/img/twitter.png" alt="">
+                            <picture>
+                                <source srcset="./assets/img/twitter.webp" type="image/webp">
+                                <source srcset="./assets/img/twitter.png" type="image/png">
+                                <img src="./assets/img/twitter.png" alt="">
+                            </picture>
                         </a></li>
                 </ul>
             </div>
