Adds missing webp images

--- a/index.html
+++ b/index.html
@@ -280,13 +280,25 @@
                     </div>
                     <div class="platform__images">
                         <div class="platform__image">
-                            <img src="./assets/img/android.png" alt="">
+                            <picture>
+                                <source srcset="./assets/img/android.webp" type="image/webp">
+                                <source srcset="./assets/img/android.png" type="image/png">
+                                <img src="./assets/img/android.png" alt="">
+                            </picture>
                         </div>
                         <div class="platform__image">
-                            <img src="./assets/img/apple.png" alt="">
+                            <picture>
+                                <source srcset="./assets/img/apple.webp" type="image/webp">
+                                <source srcset="./assets/img/apple.png" type="image/png">
+                                <img src="./assets/img/apple.png" alt="">
+                            </picture>
                         </div>
                         <div class="platform__image">
-                            <img src="./assets/img/windows.png" alt="">
+                            <picture>
+                                <source srcset="./assets/img/windows.webp" type="image/webp">
+                                <source srcset="./assets/img/windows.png" type="image/png">
+                                <img src="./assets/img/windows.png" alt="">
+                            </picture>
                         </div>
 
 
@@ -389,9 +401,11 @@
         <div class="section__cookie">
             <div class="cookie__container">
                 <div class="cookie__img">
-                    <source srcset="./assets/img/cookie.webp" type="image/webp">
-                    <source srcset="./assets/img/cookie.png" type="image/png">
-                    <img src="./assets/img/cookie.png" alt="">
+                    <picture>
+                        <source srcset="./assets/img/cookie.webp" type="image/webp">
+                        <source srcset="./assets/img/cookie.png" type="image/png">
+                        <img src="./assets/img/cookie.png" alt="">
+                    </picture>
                 </div>
                 <div class="cookie__content">
                     <div class="cookie__heading">
