Modifies the css link at the top of page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta name=”twitter:title” content="Landing page | Foreigneers" />
     <meta name=”twitter:description” content="blank" />
     <meta name=”twitter:image” content="./assets/config/android-chrome-512x512.png" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="preload" href="css/style.css" as="style">
 </head>
 
 <body>
