Adds width to modal window

--- a/signup.html
+++ b/signup.html
@@ -356,7 +356,7 @@
                                     </select>
                                 </div>
                                 <div class="">
-                                    <input type="text" name="mobilenumber" class="form__input"
+                                    <input type="text" name="mobilenumber" class="form__input form__input--1"
                                         placeholder="Mobile Number">
                                 </div>
                             </div>
