Adds changes to multistep form

--- a/signup.html
+++ b/signup.html
@@ -86,14 +86,16 @@
                         </div>
                         <div class="tab">
                             <div class="form__group">
-                                <div class="form__label">
-                                    <img src="./assets/img/account.png" alt="">
-                                </div>
+
                                 <input type="date" name="dateofbirth" class="form__input" placeholder="Date of Birth">
+                            </div>
+                            <div class="form__group">
+                                <input type="text" name="country" class="form__input" placeholder="Country" id="">
+
                             </div>
                             <div class="form__group--1">
                                 <div class="">
-                                    <select id="country" name="country" class="form__input-select">
+                                    <select id="countryCode" name="countryCode" class="form__input-select">
                                         <option data-countryCode="US" value="USA/1">USA (+1)</option>
                                         <option data-countryCode="GB" value="UK/44">UK (+44)</option>
                                         <option disabled="disabled">Other Countries</option>
