--- a/signup.html
+++ b/signup.html
@@ -72,13 +72,13 @@
                             </div>
                             <div class="form__group">
                                 <div class="form__label">
-                                    <img src="./assets/img/email.png" alt="">
+                                    <img src="./assets/img/account.png" alt="">
                                 </div>
                                 <input type="text" name="fullname" class="form__input" placeholder="Full Name">
                             </div>
                             <div class="form__group">
                                 <div class="form__label">
-                                    <img src="./assets/img/password.png" alt="">
+                                    <img src="./assets/img/email.png" alt="">
                                 </div>
                                 <input type="email" name="email" class="form__input" placeholder="Email">
                             </div>
@@ -372,6 +372,9 @@
                                 </div>
                                 <input type="password" name="password" class="form__input" placeholder="Password"
                                     id="password">
+                                <a class="show__password">
+                                    <img src="./assets/img/eye.png" alt="" class="show__password-img">
+                                </a>
                             </div>
 
                             <span class="text__primary text__password-strength">Password Strength</span>
