--- a/signup.html
+++ b/signup.html
@@ -477,19 +477,23 @@
 
                     </div>
                     <div class="card__footer">
-                        <a class="card__download" href="#">
+                        <hr>
+                        <div class="flex">
+                            <a class="card__download" href="#">
 
-                            <img src="./assets/img/document.png" alt="">
+                                <img src="./assets/img/document.png" alt="">
 
-                            Download
+                                Download
 
-                        </a>
-                        <div class="card__buttons">
-
-                            <a class="btn uppercase btn__form" id="closeTermsBtn">
-                                Close
                             </a>
+                            <div class="card__buttons">
+
+                                <a class="btn uppercase btn__form" id="closeTermsBtn">
+                                    Close
+                                </a>
+                            </div>
                         </div>
+
                     </div>
 
                 </div>
