Adds more styling to horizontal line

--- a/signup.html
+++ b/signup.html
@@ -477,7 +477,7 @@
 
                     </div>
                     <div class="card__footer">
-                        <hr>
+                        <hr class="hr">
                         <div class="flex">
                             <a class="card__download" href="#">
 
