Corrects padding in smaller screens

--- a/signup.html
+++ b/signup.html
@@ -93,7 +93,7 @@
                                 <input type="text" name="country" class="form__input" placeholder="Country" id="">
 
                             </div>
-                            <div class="form__group--1">
+                            <div class="form__group">
                                 <div class="">
                                     <select id="countryCode" name="countryCode" class="form__input-select">
                                         <option data-countryCode="US" value="USA/1">USA (+1)</option>
