--- a/signin.html
+++ b/signin.html
@@ -55,11 +55,23 @@
                             </div>
                             <input type="text" name="" class="form__input" placeholder="Email">
                         </div>
-                        <div class="form__group">
+                        <div class="form__group flex--1">
                             <div class="form__label">
                                 <img src="./assets/img/password.png" alt="">
                             </div>
-                            <input type="password" name="" class="form__input" placeholder="Password">
+                            <input type="password" name="password" class="form__input" placeholder="Password"
+                                id="password">
+                            <a class="show__password">
+                                <img src="./assets/img/eye.png" alt="" class="show__password-img">
+                            </a>
+
+                        </div>
+                        <div class="form__group--2">
+                            <input type="checkbox" name="rememberMe" id="rememberMeLogin" class="form__input-checkbox">
+                            <span class="checkbox__text text__primary">
+                                Remember me ?
+                            </span>
+
                         </div>
                         <div class="form__button u_center_text">
                             <button type="submit" class="btn btn__form uppercase">Sign in</button>
@@ -91,5 +103,6 @@
 
     </div>
 </body>
+<script src="./js/app.js"></script>
 
 </html>
