Adds custom checkbox

--- a/signin.html
+++ b/signin.html
@@ -67,10 +67,10 @@
 
                         </div>
                         <div class="form__group--2">
-                            <input type="checkbox" name="rememberMe" id="rememberMeLogin" class="form__input-checkbox">
-                            <span class="checkbox__text text__primary">
-                                Remember me ?
-                            </span>
+                            <label class="control control--checkbox text__primary">Remember Me ?
+                                <input type="checkbox" />
+                                <div class="control__indicator"></div>
+                            </label>
 
                         </div>
                         <div class="form__button u_center_text">
