Removes prevent default from form buttons

--- a/signup.html
+++ b/signup.html
@@ -397,8 +397,8 @@
                         </div>
 
                         <div class="tab__buttons">
-                            <button class="btn btn__form btn__form--1 prevBtn">Previous</button>
-                            <button class="btn btn__form btn__form--1 nextBtn">Next</button>
+                            <button type="button" class="btn btn__form btn__form--1 prevBtn">Previous</button>
+                            <button type="button" class="btn btn__form btn__form--1 nextBtn">Next</button>
                         </div>
 
 
