Corrects errors in formm submission

--- a/signup.html
+++ b/signup.html
@@ -62,7 +62,7 @@
                     </div>
 
 
-                    <form>
+                    <form id="registerForm">
                         <div class="tab">
                             <div class="form__group">
                                 <div class="form__label">
