Handles form errors

--- a/signin.html
+++ b/signin.html
@@ -48,6 +48,9 @@
                         <div class="heading__tertiary">Sign in to Foreigneers</div>
                     </div>
                     <form>
+                        <div class="form__validation error">
+                            <div class="text__validation">Incorrect Username</div>
+                        </div>
 
                         <div class="form__group">
                             <div class="form__label">
