--- a/index.html
+++ b/index.html
@@ -444,13 +444,13 @@
             <div class="footer__center">
                 <ul class="footer__links">
                     <li class="footer__item">
-                        <a href="#" class="footer__link">Get in contact</a>
+                        <a href="./get-in-contact.html" class="footer__link">Get in contact</a>
                     </li>
                     <li class="footer__item">
-                        <a href="#" class="footer__link">Privacy</a>
+                        <a href="./terms-and-privacy-policy.html" class="footer__link">Privacy</a>
                     </li>
                     <li class="footer__item">
-                        <a href="#" class="footer__link">Hiring</a>
+                        <a href="./hiring.html" class="footer__link">Hiring</a>
                     </li>
                     <li class="footer__item">
                         <a href="#" class="footer__link">Terms of Service</a>
